--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.banner {
+  width: 1440px;
+  height: 300px;
+  left: 0px;
+  top: 0px;
+}
+.headerCls{
+  background: rgba(0, 0, 0, 0.2) !important
+}
+.linkSize{
+  font-size:12px !important
+}
+.blockCard{
+  position: fixed;
+  left: 70px;
+}
