added slider with custom code

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,9 @@ code {
   position: fixed;
   left: 70px;
 }
+.img-inline {
+  display:inline !important
+}
+.img-hide {
+  display:none !important
+}
